[package]
name = "bmv"
description = "Batch Move -- rename large numbers of files easily"
authors = ["Alex Sun <alexsun@maibox.org>"]
readme = "README.org"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ranmaru22/bmv"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globset = "0.4.8"
ignore = "0.4.18"
regex = "1.5.5"

[dependencies.clap]
version = "~3.1.6"
features = ["cargo", "env"]